--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ body{
 }
 
 main{
- width: 320px;
+ min-width: 320px;
 }
 
 h1{
@@ -196,20 +196,35 @@ img{
 	margin: 0;
 }
 
-.carrossel{
-	width: 100%;
-	height: 427px;
-    overflow: hidden; 
+.carrossel {
+    width: 100%;
+    overflow: hidden;
     position: relative;
 }
 
-.imgs-carrossel{
+.imgs-carrossel {
     display: flex;
     transition: transform 0.3s ease;
 }
 
-.imgs-carrossel img{
-    width: 100%;
+.imgs-carrossel div{
+	width: 100%;
+	padding: 6px;
+	position: absolute;
+	left:0;
+	top:0;
+	background-color: rgba(0, 0, 0, .35);
+	display: flex;
+	justify-content: center;
+}
+
+.imgs-carrossel section {
+    flex: 0 0 100%; /* Cada seção ocupa toda a largura do contêiner */
+    position: relative;
+}
+
+.imgs-carrossel img {
+    width: 100%; 
     height: auto;
 }
 
@@ -258,7 +273,7 @@ img{
 }
 
 .botao-facilitadores{
-	width: 220px;
+	width: 240px;
 	height: 40px;
 	color: #fff;
 	font-weight: bold;
@@ -268,7 +283,7 @@ img{
 	border-radius: 20px;
 	position: absolute;
 	bottom: 60px;
-	left: calc(50% - 110px);
+	left: calc(50% - 120px);
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -276,7 +291,7 @@ img{
 }
 
 
-#sessao-michel{
+.sessao-facilitadores{
 	width: 160px;
 	height: 40px;
 	color: #fff;
@@ -288,24 +303,6 @@ img{
 	position: absolute;
 	bottom: 60px;
 	left: calc(50% - 80px);
-	display: flex;
-	flex-direction: column;
-}
-
-#sessao-carla{
-	width: 160px;
-	height: 40px;
-	color: #fff;
-	font-weight: bold;
-	background-color: rgba(13,75,200,.65);
-	box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.35);
-	border: solid 2px #fff;
-	border-radius: 20px;
-	position: absolute;
-	bottom: 60px;
-	left: calc(50% - 80px);
-	display: flex;
-	flex-direction: column;
 }
 
 .botao-fechar{
@@ -417,6 +414,7 @@ img{
 }
 
 .depoimento article{
+	width: 100%;
 	height: inherit;
 	background-color: #50086A;
 	padding: 16px;
@@ -450,7 +448,6 @@ img{
 
 .decima-primeira-sessao img{
 	width: 100%;
-	height: 275px;
 }
 
 .decima-primeira-sessao b{
@@ -462,6 +459,9 @@ img{
 	text-align: center;
 }
 
+
+
+
 .sessao-chamada{
 	width: 100%;
 	padding: 20px;
@@ -472,6 +472,10 @@ img{
 	flex-direction: column;
 }
 
+.sessao-chamada h3{
+	margin-bottom: 8px;
+}
+
 .sessao-chamada p{
 	margin-bottom: 10px;
 }
@@ -479,4 +483,36 @@ img{
 .sessao-chamada b{
 	position: unset;
 	font-size: 16px;
+}
+
+
+
+.ultima-sessao{
+	width: 100%;
+	position: relative;
+}
+
+.ultima-sessao img{
+	width:100%;
+}
+
+.ultima-sessao p{
+	text-align: center;
+	font-family: "Strawberry Chocolate";
+}
+
+.ultima-sessao p:first-child{
+	width:240px;
+	font-size: 20px;
+	position: absolute;
+	top: 120px;
+	left: calc(50% - 120px);
+}
+
+.ultima-sessao p:last-child{
+	font-size: 26px;
+	position: absolute;
+	bottom: 10px;
+	right: 20px;
+	margin: 0;
 }
