--- a/css/style.css
+++ b/css/style.css
@@ -20,30 +20,25 @@
 }
 
 @font-face {
-	font-family:'verdana';
-	src: url('../fonts/verdana.ttf') format('truetype');
+    font-family:'Bellerose';
+    src: url('../fonts/Bellerose.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
-	font-family:'verdana-bold';
-	src: url('../fonts/verdana-bold.ttf') format('truetype');
-    font-weight: bold;
+    font-family:'Certier';
+    src: url('../fonts/Bellerose.otf') format('opentype');
+    font-weight: normal;
     font-style: normal;
 }
 
-@font-face {
-	font-family:'verdana-bold-italic';
-	src: url('../fonts/verdana-bold-italic.ttf') format('truetype');
- 	font-weight: bold;
-    font-style: italic;
-}
+
 
 *{
 	margin: 0;
 	padding: 0;
-	font-family:"verdana", sans-serif;
+	font-family:"arial", sans-serif;
 	color: #fff;
 	box-sizing: border-box;
 }
@@ -61,8 +56,10 @@ main{
 }
 
 h1{
-	margin: 0 0 8px 0;
+	font-family: "Bellerose";
+	margin: 0 0 20px 0;
 	font-size: 20px;
+	line-height: 20px;
 }
 
 h2{
@@ -70,6 +67,7 @@ h2{
 	font-size: 28px;
 	margin: 0;
 	font-weight: normal;
+	margin-bottom: 12px;
 }
 
 h3{
@@ -79,7 +77,7 @@ h3{
 
 p{
 	font-size: 12px;
-	margin: 0 0 16px 0;
+	margin: 0 0 10px 0;
 }
 
 ul{
@@ -93,6 +91,8 @@ button{
 
 li{
 	font-size:12px;
+	position: relative;
+	padding-bottom: 8px;
 }
 
 img{
@@ -100,7 +100,7 @@ img{
 }
 
 .logo{
-	width: 140px;
+	width: 240px;
 	margin-bottom: 20px;
 }
 
@@ -110,7 +110,7 @@ img{
 }
 
 .txt-cinza{
-	color: #4a4a4a;
+	color: #2e2e2e;
 }
 
 .divisao{
@@ -123,7 +123,7 @@ img{
 }
 
 .txt-destaque{
-	font-size: 16px;
+	font-size: 14px;
 }
 
 .sessao-com-img{
@@ -144,9 +144,34 @@ img{
 	background:#C77A08;
 }
 
+.conteudo-terceira-sessao p{
+	margin: 12px 0;
+}
+
 .conteudo-quinta-sessao{
 	background-color:#DED00D;
 	padding: 20px;
+}
+
+.conteudo-quinta-sessao ul li{
+	list-style-type: none;
+	position: relative;
+}
+
+.conteudo-quinta-sessao ul li:before{
+  content: ""; /* Conteúdo vazio para o pseudo-elemento */
+  position: absolute;
+  left: -28px;
+  top: 50%;
+  transform: translateY(calc(-50% - 10px));
+  width: 20px; 
+  height: 15px; 
+  background-image: url('../imgs/icone-check-cinza.png');
+  background-size: 20px 15px; 
+}
+
+.conteudo-quinta-sessao ul li p, .conteudo-quinta-sessao ul li b{
+	color: inherit;
 }
 
 .conteudo-quinta-sessao h2{
@@ -164,12 +189,24 @@ img{
 	left: 20px;
 }
 
-.txt-onde-e-quando{
+.txt-onde-e-quando-1{
+	width: 320px;
 	position: absolute;
-	top: 95px;
-	left: calc(50% - 117px);
+	top: 70px;
+	left: calc(50% - 160px);
 	text-align: center;
+	font-size: 16px;
 }
+
+.txt-onde-e-quando-2{
+	width: 320px;
+	position: absolute;
+	bottom: 40px;
+	left: calc(50% - 160px);
+	text-align: center;
+	font-size: 16px;
+}
+
 
 .efeito-img-escrita{
 	background: rgb(0, 0, 0, .35);
@@ -179,7 +216,7 @@ img{
 }
 .efeito-img-escrita-1{
 	width: 100%;
-	height: 214px;
+	height: 230px;
 }
 
 .conteudo-setima-sessao{
@@ -189,6 +226,23 @@ img{
 
 .conteudo-setima-sessao h2{
 	margin-bottom: 12px;
+}
+
+.conteudo-setima-sessao ul li{
+	list-style-type: none;
+	position: relative;
+}
+
+.conteudo-setima-sessao ul li:before{
+  content: ""; /* Conteúdo vazio para o pseudo-elemento */
+  position: absolute;
+  left: -28px;
+  top: 50%;
+  transform: translateY(calc(-50% - 10px));
+  width: 20px; 
+  height: 15px; 
+  background-image: url('../imgs/icone-check-branco.png');
+  background-size: 20px 15px; 
 }
 
 .conteudo-oitava-sessao{
@@ -221,7 +275,6 @@ img{
 	margin-bottom: 20px;
 	padding: 12px;
 	box-sizing: border-box;
-
 }
 
 .box-valores .valor{
@@ -263,6 +316,7 @@ img{
 .imgs-carrossel section {
     flex: 0 0 100%; /* Cada seção ocupa toda a largura do contêiner */
     position: relative;
+	height: 458px;
 }
 
 .imgs-carrossel img {
@@ -304,7 +358,7 @@ img{
 }
 
 .conteudo-nona-sessao h2{
-	padding: 20px 0 12px 20px;
+	padding: 20px 0 0 20px;
 }
 
 .container-facilitadores{
@@ -419,7 +473,7 @@ img{
 }
 
 .conteudo-decima-sessao h2{
-	padding: 20px 0 12px 20px;
+	padding: 20px 0 0 20px;
 	box-sizing: border-box;
 }
 
@@ -444,6 +498,7 @@ img{
 .depoimento-destaque article p{
 	font-family: "Strawberry Chocolate";
 	font-size: 13px;
+	text-align: justify;
 }
 
 .depoimento{
@@ -466,6 +521,7 @@ img{
 .depoimento article p{
 	font-family: "Strawberry Chocolate";
 	font-size: 13px;
+	text-align: justify;
 }
 
 .nome-participantes{
@@ -493,16 +549,13 @@ img{
 }
 
 .decima-primeira-sessao b{
-	width: 260px;
+	width: 300px;
 	position: absolute;
 	top: 20px;
-	left: calc(50% - 130px);
-	font-size: 12px;
+	left: calc(50% - 150px);
+	font-size: 16px;
 	text-align: center;
 }
-
-
-
 
 .sessao-chamada{
 	width: 100%;
@@ -528,7 +581,6 @@ img{
 }
 
 
-
 .ultima-sessao{
 	width: 100%;
 	position: relative;
@@ -538,20 +590,21 @@ img{
 	width:100%;
 }
 
-.ultima-sessao p{
+.ultima-sessao b{
 	text-align: center;
 	font-family: "Strawberry Chocolate";
+	font-size: 16px;
 }
 
-.ultima-sessao p:first-child{
-	width:240px;
+.ultima-sessao b:first-child{
+	width:300px;
 	font-size: 20px;
 	position: absolute;
 	top: 120px;
-	left: calc(50% - 120px);
+	left: calc(50% - 150px);
 }
 
-.ultima-sessao p:last-child{
+.ultima-sessao b:last-child{
 	font-size: 26px;
 	position: absolute;
 	bottom: 10px;
